# Copyright 2023 M. Boerger (helly25.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//mbo/mope:mope.bzl", "mope_test")

package(default_visibility = ["//mbo/types:__pkg__"])

cc_library(
    name = "cases_cc",
    hdrs = ["cases.h"],
)

cc_library(
    name = "extend_cc",
    hdrs = [
        "extend.h",
        "extender.h",
    ],
)

cc_library(
    name = "struct_names_cc",
    srcs = ["struct_names_clang.h"],
    hdrs = ["struct_names.h"],
    deps = [
        ":traits_cc",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "traits_cc",
    hdrs = [
        "binary_search.h",
        "decompose_count.h",
        "is_braces_constructible.h",
    ],
    deps = ["cases_cc"],
)

cc_library(
    name = "test_types_cc",
    testonly = 1,
    hdrs = ["test_types.h"],
    deps = [
        "cases_cc",
        "@com_google_googletest//:gtest",
    ],
)

mope_test(
    name = "decompose_count_test",
    srcs = ["decompose_count.h.mope"],
    outs = ["decompose_count.h"],
    clang_format = True,
)